fixed controls overlap

--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -59,6 +59,9 @@ agm-map, .overlay {
   margin: 0;
   text-align: left;
 }
+.controls-2 {
+  top: 6.1rem;
+}
 .controls .field {
   margin-bottom: 0.5rem;
 }
